--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,10 +20,11 @@
 }
 
 .actions #message {
-	width: 150px;
+	width: 270px;
 }
 
 .actions #ok {
+	float: right;
 	width: 45px;
 	margin-left: 5px;
 	margin-right: 5px;
