--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -33,3 +33,49 @@
 	background-repeat: no-repeat;
 	background-position:center;
 }
+
+
+/* Right Panel */
+
+.profile {
+	overflow: hidden;
+	margin-bottom: 15px;
+}
+
+.profile-img {
+	height: 60px;
+	width: 60px;
+	background-image: url('../images/jimmy.jpg');
+	background-size: 100% 100%;
+	float: left;
+	border: 1px solid rgba(0,0,0,0.2);
+	border-radius: 30px;
+	margin-right: 15px;
+}
+
+.name {
+	font-size: 40px;
+	font-weight: bold;
+	line-height: 60px;
+}
+
+.status {
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+
+.status.busy {
+	color: #f00;
+}
+
+.status.free {
+	color: #00f;
+}
+
+.free-at {
+	font-size: 14px;
+}
+
+.request-actions {
+	margin: 20px auto;
+}
