--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -32,6 +32,14 @@
 	font-size: 14px;
 }
 
-.ui-content {
+.custom-header-with-content {
 	margin-top: 40px;
+}
+
+
+#jqm-header {
+	background-color: #5cbdea;
+	background-image: none;
+	text-shadow: none;
+	border-bottom: none;
 }
