--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,6 @@
 .actions {
 	width: 100%;
 	height: 50px;
-	background: #333;
 }
 
 .actions > * {
@@ -32,6 +31,17 @@
 	background-size: auto 25px;
 	background-repeat: no-repeat;
 	background-position:center;
+}
+
+.actions .ui-input-text {
+	background-color: #f7f7f7;
+	border-color: #dedede;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	color: black;
+	text-shadow: none;
+	color: rgb(51, 51, 51);
+	font-size: 14px;
 }
 
 
