--- a/stylesheets/stitches.css
+++ b/stylesheets/stitches.css
@@ -33,3 +33,10 @@ body, .ui-page {
 	margin-top: 5px;
 	display: none;
 }
+
+.row {
+    border-color:#B0B0B0;
+    border-width:1px;
+    border-style:solid;
+    padding:5px;
+}
