--- a/stylesheets/stitches.css
+++ b/stylesheets/stitches.css
@@ -48,3 +48,18 @@ body, .ui-page {
 #select_message {
 	text-align: center;
 }
+
+#sortable { 
+    list-style-type: none; 
+    margin: 0; 
+    padding: 0 0 2.5em; 
+    float: center;
+    margin-right: 10px;
+}
+
+#sortable li {
+    margin: 0 5px 5px 5px; 
+    padding: 5px; 
+    font-size: 1.2em; 
+    width: 300px;
+}
