--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,7 +55,7 @@
 .profile-img {
 	height: 60px;
 	width: 60px;
-	background-image: url('../images/jimmy.jpg');
+	background-image: url('../images/child.jpg');
 	background-size: 100% 100%;
 	float: left;
 	border: 1px solid rgba(0,0,0,0.2);
