--- a/stylesheets/message.css
+++ b/stylesheets/message.css
@@ -50,7 +50,7 @@ body, .ui-page, .ui-body-c {
 .received .face {
 	float: left;
 	border: 1px solid #dfdfdf;
-	background-image: url('../images/mom.jpg');
+	background-image: url('../images/no-face.jpg');
 }
 
 .face {
