--- a/stylesheets/schedule.css
+++ b/stylesheets/schedule.css
@@ -2,12 +2,12 @@ body, .ui-page {
 	background: white !important;
 }
 
-.ui-content {
+#schedule .ui-content {
 	height: 100vh;
 	padding: 0;
 }
 
-#footer {
+#schedule #footer {
 	border-top: 1px solid #dfdfdf;
 	height: 45px;
 	background-color: #ececec;
@@ -20,40 +20,40 @@ body, .ui-page {
 	width: 100%;
 }
 
-#footer .note {
+#schedule #footer .note {
 	float: left;
 	margin-top: 15px;
 	margin-left: 10px;
 }
 
-#footer .call {
+#schedule #footer .call {
 	float: right;
 	margin-right: 10px;
 	margin-top: 5px;
 	display: none;
 }
 
-#left-col {
+#schedule #left-col {
 	float: left;
 	height: 100%;
 	width: 20%;
 }
 
-#left-col .time {
+#schedule #left-col .time {
 	margin-top: 10px;
 	height: 65px;
 	text-align: right;
 	padding-right: 10px;
 }
 
-#right-col {
+#schedule #right-col {
 	float: left;
 	height: 100%;
 	width: 80%;
 	padding-top: 20px;
 }
 
-#right-col .item{
+#schedule #right-col .item{
 	height: 75px;
 	padding-top: 10px;
 	padding-left: 10px;
@@ -61,15 +61,15 @@ body, .ui-page {
 	text-shadow: none;
 }
 
-.item.taken {
+#schedule .item.taken {
 	background-color: #ffeaed;
 }
 
-.item.schedule {
+#schedule .item.schedule {
 	background-color: #d3d3d3;
 }
 
-.item.schedule span {
+#schedule .item.schedule span {
 	display: block;
 	font-size: 12px;
 	font-style: italic;
