--- a/stylesheets/stitches.css
+++ b/stylesheets/stitches.css
@@ -74,9 +74,18 @@ body, .ui-page {
     margin: 0 5px 5px 5px; 
     padding: 5px; 
     font-size: 1.2em; 
-    width: 300px;
+    width: 112px;
+}
+
+.faded {
+	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+	-moz-opacity: 0.5;
+	opacity: 0.5;
 }
 
 img.highlighted {
-    border: 2px solid blue;
+	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+	-moz-opacity: 1;
+	opacity: 1;
+    border: 3px solid black;
 }
