--- a/stylesheets/stitches.css
+++ b/stylesheets/stitches.css
@@ -7,6 +7,11 @@ body, .ui-page {
 	padding: 0;
 }
 
+#logo {
+	position: absolute;
+	top: 11px;
+	left: 12px;
+}
 
 #footer {
 	border-top: 1px solid #dfdfdf;
