--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -11,10 +11,12 @@
 }
 
 #header .title {
+	position: absolute;
 	text-align: center;
 	padding-top: 11px;
 	font-weight: 600;
 	display: inline-block;
+	right: 5px;
 }
 
 #header .back-btn {
