--- a/stylesheets/stitches.css
+++ b/stylesheets/stitches.css
@@ -53,8 +53,27 @@ body, .ui-page {
     padding:5px;
 }
 
+#slideshow{
+    text-align: center;
+    width: 300px;
+    height: 300px;
+    background-size:300px 300px;
+    background-image:url('../images/maui_1.jpg');
+    background-repeat:no-repeat;
+    margin: 5px auto;
+}
+
 #images {
 	text-align: center;
+}
+
+#record {
+    width: 50px;
+    height: 50px;
+    background-size:50px 50px;
+    background-image:url('../images/record.png');
+    background-repeat:no-repeat;
+    margin: 0 auto;
 }
 
 #select_message {
@@ -80,6 +99,7 @@ body, .ui-page {
     padding: 5px; 
     font-size: 1.2em; 
     width: 112px;
+    float: left;
 }
 
 .faded {
