--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,7 +55,7 @@
 .profile-img {
 	height: 60px;
 	width: 60px;
-	background-image: url('../images/child.jpg');
+	background-image: url('../images/mom.jpg');
 	background-size: 100% 100%;
 	float: left;
 	border: 1px solid rgba(0,0,0,0.2);
@@ -63,7 +63,7 @@
 	margin-right: 15px;
 }
 
-.name {
+#options-panel .name-other {
 	font-size: 40px;
 	font-weight: bold;
 	line-height: 60px;
