--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -1,3 +1,7 @@
+body {
+	min-width: 370px;
+}
+
 #header {
 	background-color: #5cbdea;
 	background-image: none;
@@ -134,4 +138,19 @@
 	background-position: center 10px;
 	padding: 0 7px;
 	padding-top: 30px;
+}
+
+.toast {
+	width: 276px;
+	margin: 0 auto;
+	padding: 10px 12px;
+	background-color: rgba(0, 0, 0, 0.75);
+	box-shadow: 1px 1px 5px #777;
+	font-size: 14px;
+	color: whitesmoke;
+	text-shadow: none;
+	text-align: center;
+	position: absolute;
+	bottom: 40px;
+	left: 40px;
 }
