--- a/stylesheets/notify.css
+++ b/stylesheets/notify.css
@@ -1,4 +1,4 @@
-body {
+#lockscreen {
 	background-color: #000;
 	background-image: url('../images/lockscreen.png');
 	background-repeat: no-repeat;
@@ -6,8 +6,23 @@ body {
 	background-size: auto 100%;
 }
 
+#lockscreen .time {
+	text-align: center;
+	color: #FFF;
+	font-weight: 300;
+	font-size: 97px;
+	height: 120px;
+}
+
+#lockscreen .date {
+	font-size: 23px;
+	text-align: center;
+	color: white;
+	font-weight: 300;
+}
+
 .notifications {
-	margin-top: 150px;
+	margin-top: 50px;
 }
 
 .notification {
@@ -18,6 +33,11 @@ body {
 	display: inline-block;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
+}
+
+.notification .title {
+	font-size: 16px;
+	font-weight: bold;
 }
 
 .notification .face {
